--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,8 @@
     "colors": "^1.4.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "d3-random": "^2.2.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "helmet": "^4.1.1",
@@ -22,6 +24,8 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.0",
     "morgan": "^1.10.0",
+    "nanoid": "^3.1.20",
+    "proof-of-work": "^3.3.2",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
